# rosbot

./: ':w  .gitignore  .gitmodules  KostyaWorkLog.md  README.md  WorkLog.md  \  teleport.sh
.work_logs/: KostyaWorkLog.md  WorkLog.md
docker/: Dockerfile  README.md  build.sh  build_docker_image.bash  create_docker_container.bash  dependencies.sh  docker_bash.zsh  docker_build.zsh  enter_container.bash  run.sh  run_docker.zsh
docker-gazebo/: Dockerfile  build.sh  dependencies_archb.sh  run.sh  run_archb.sh
docker-gazebo/scripts/: ros-setup.sh
docker/scripts/: add-repositories.sh  add-user.sh  bash-completion.sh  python-pip.sh  python2-pkgs.sh  python3-pkgs.sh  ros-pkgs.sh  ros-setup.sh  utils-install.sh  utils-setup.sh
docs/: control_gen.md  create_graphs.md  data_collect.md  launch_files.md  logger.md  offline_planner.md  open_loop.md  path_follower.md
logger/: CMakeLists.txt  README.md  package.xml
logger/bagfiles/: subset.bag
logger/launch/: logger.launch
logger/output_data/0_tak_sebe/: control.csv  kinetic_model_state.csv  nn_model_state.csv  state.csv  time.csv
logger/output_data/1/: kinetic_model_state.csv  nn_model_state.csv  state.csv  time.csv
logger/output_data/2/: control.csv  kinetic_model_state.csv  state.csv  (+2 more)
logger/src/: create_graphs.py  data_to_csv.py  draw_states.py  logger_node.py
path_viz/: CMakeLists.txt  package.xml
path_viz/launch/: path_viz.launch
path_viz/src/: path_viz.py
plotter/: CMakeLists.txt  package.xml
plotter/launch/: plotter.launch
plotter/src/: create_graphs.py  data_process_tools.py  plotter_node.py
rosbot2/: CMakeLists.txt  package.xml
rosbot2/config/: amcl_params.yaml
rosbot2/launch/: amcl.launch  dwa_move_base.launch  empty_world.launch  exploration.launch  gazebo_bringup.launch  gazebo_bringup1.launch  gazebo_navigation.launch  gazebo_slam.launch  gazebo_world.launch  gmapping.launch  map_server.launch  move_base.launch  rosbot_bringup.launch  rosbot_navigation.launch  rosbot_slam.launch  rosbot_static_tf.launch  rviz.launch  spawn_rosbot.launch  teb_move_base.launch  test_rosbot.launch  urock.launch  urock_system.launch  urock_system1.launch
rosbot2/maps/: maze_map_2.pgm  maze_map_2.yaml  maze_map_3.pgm  maze_map_3.yaml
rosbot2/rviz/: rosbot2.rviz  urock (copy 1).rviz  urock.rviz
rosbot2/worlds/: empty.world
rosbot_controller/: CMakeLists.txt  package.xml
rosbot_controller/cfg/: MPPI.cfg  config_1
rosbot_controller/config/: maps.yaml  mppi.yaml  path_publish.yaml  paths.yaml  scene.yaml
rosbot_controller/launch/: control_gen.launch  follow_path.launch  folow_path.launch  map_publisher.launch  mppi.launch  mppi_test.launch  nn_model_runner.launch  offline_planner_test.launch  path_publisher.launch  publish_path.launch  run_simulation.launch  scene_publisher.launch  spawn_kinematic_model.launch  spawn_nn_model.launch  spawn_rosbot.launch
rosbot_controller/plans/: 1000_2_4  500_2_4  500_2_4_2  plan.txt  test
rosbot_controller/rviz/: mppi.rviz  urock.rviz
rosbot_controller/scripts/: show_mode_struct.py
rosbot_controller/src/: colect_data.zsh  collect_data.py  collect_dataset.zsh  control_generator.py  model.onnx  model_100.onnx  model_1000.onnx  model_runner.py  mppic.py  nn_model_follower.py  nn_model_runner.py  path_follower.py  path_publisher.py  run_sim_with_control_from_file.zsh  temp_plot.py  test.zsh
rosbot_controller/src/modules/: rosbot.py
rosbot_controller/src/mppi/: README.md  controller.py  goal_handler.py  local_planner.py  local_planner_node.py  losses.py  metric_handler.py  mpc_dtypes.py  mpc_utils.py  mppi.md  mppic.py  offline_planner.py  path_handler.py  path_publisher.py  path_publisher_node.py  profiler.py  robot.py
rosbot_controller/src/mppi/losses/: losses.py
rosbot_controller/src/mppi/model/: rosbot.py
rosbot_controller/src/mppi/models/: rosbot.py
rosbot_controller/src/mppi/modules/: controller.py  goal_handler.py  map_handler.py  metric_handler.py  path_handler.py  robot.py
rosbot_controller/src/mppi/optimization/policies/: control.py  loss.py
rosbot_controller/src/mppi/optimizers/: mppic.py  mppic_generator.py  mppic_optimizer.py  optimizer.py  pso.py
rosbot_controller/src/mppi/policies/: control.py  costs.py  metrics.py
rosbot_controller/src/mppi/untested/: mppic.py
rosbot_controller/src/mppi/unused/: model.py  rosbot.py
rosbot_controller/src/mppi/utils/: dtypes.py  geometry.py  logger_tools.py  losses.py  policies.py  profiler.py  visualizations.py
rosbot_controller/src/mppi/utils/optimization/: losses.py  policies.py
rosbot_controller/src/offline_planner/: offline_planner.py
rosbot_controller/src/offline_planner/modules/: plot_tools.py  pso.py
rosbot_controller/src/path_publisher/: figures_generator.py  gazebo_state.py  map_generator.py  map_handler.py  obstacles_handler.py  path_publisher_node.py  paths_handler.py  scene_publisher_node.py
rosbot_controller/src/publishers/: map_generator.py  map_handler.py  map_publisher_node.py  path_generator.py  path_handler.py  path_publisher_node.py
rosbot_controller/src/rosbot_controller/: rosbot.py
rosbot_nop_controller/: CMakeLists.txt  package.xml
rosbot_nop_controller/data/: 24_NOP_461  map.yaml  q_461.txt
rosbot_nop_controller/include/: AStarPlanner.h  PSO.hpp  follower.hpp  rosbot_controller.hpp  rosbot_model.hpp  rosbot_nop_stabilization.hpp
rosbot_nop_controller/src/: AStarPlanner.cpp  PSO.cpp  follower.cpp  optimal_follower.cpp  rosbot_controller.cpp  rosbot_controller_runner.cpp  rosbot_model.cpp  rosbot_nop_stabilization.cpp  test.cpp
simple_vel_controller/: CMakeLists.txt  package.xml
simple_vel_controller/launch/: vel_control.launch
simple_vel_controller/src/: path_pub.py  simple_vel.py  temp_plot.py
test_node/: CMakeLists.txt  package.xml
test_node/include/nop/: CMakeLists.txt
test_node/include/nop/include/: baseFunctions.hpp  nop.hpp
test_node/include/nop/src/: baseFunctions.cpp  nop.cpp
test_node/include/test_node/: controller.hpp  model.hpp
test_node/src/: baseFunctions.cpp  controller.cpp  model.cpp  nop.cpp  test_node.cpp
tx/: tgnop.yml
(+10 files in other folders)
